@@ -1,0 +1,20 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+  "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>CSS Effects proposed specifications</title>
+  </head>
+  <body>
+    <h1>CSS Effects proposed specifications</h1>
+    <p>
+      <em>IMPORTANT</em>: these documents are proposals, not final specifications. They have not
+      been approved by any standards bodies.
+    </p>
+    <ul>
+      <li><a href="CSSTransforms.html">CSS Transforms</a></li>
+      <li><a href="CSSTransitions.html">CSS Transitions</a></li>
+      <li><a href="CSSAnimation.html">CSS Animation</a></li>
+    </ul>
+  </body>
+</html>
