@@ -1,0 +1,20 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+  "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>Specification proposals from the WebKit project</title>
+  </head>
+  <body>
+    <h1>Specification proposals from the WebKit project</h1>
+    <p>
+      <em>IMPORTANT</em>: these documents are proposals, not final specifications. They have not
+      been approved by any standards bodies.
+    </p>
+    <ul>
+      <li><a href="squirrelfish-bytecode.html">Squirrelfish Bytecode</a></li>
+      <li><a href="Timed_Media_CSS.html">Timed Media Elements</a></li>
+      <li><a href="CSSVisualEffects/">CSS Effects</a></li>
+    </ul>
+  </body>
+</html>
